tests/snapshots/snapshots__removing_a_marking_with_branches_says_the_commits_go_too.snap
---
source: tests/snapshots.rs
expression: "render(&mut app, 120, 24)"
---
 caligula  1 repo · 7 worktrees (6 linked) · 1 dirty · 4 stale · 2 safe to remove
╭ sort activity · lens all ──────────────────────╮╭────────────────────────────────────────────────────────────────────╮
│   BRANCH                    ↑   ↓   ±     AGE  ││ docs/gone  ancient · last touched 1y                               │
│ ▾ fixture (6)               1       2      2h  ││ /fixture/gone                                                      │
│ │ ◆ main                                   2h  ││                                                                    │
│▌│ ● feat/ahead        ╭ Remove marked worktrees and their branches? ─────────────────────────╮gone from disk         │
│ │ ● chore/clean       │ feat/dirty                          1 modified file, 1 untracked     │                       │
│ │ ● (3head000)        │ file                                                                 │ read it               │
│▌│ ● feat/dirty        │ feat/ahead                          1 off-base commit                │                       │
│ │ ✗ docs/gone         │                                                                      │                       │
│ │ ● fix/locked        │ 2 worktrees across 1 repository                                      │                       │
│                       │ 1 holds uncommitted work — 2 files destroyed, and git will only      │                       │
│                       │ remove them with --force                                             │                       │
│                       │ 1 commit exists nowhere else; deleting the branches loses them       │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │  y  do it     n  cancel                                              │                       │
│                       ╰──────────────────────────────────────────────────────────────────────╯                       │
│                                                ││                                                                    │
│                                                ││                                                                    │
│                                                ││                                                                    │
│                                                ││                                                                    │
╰────────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────╯
 2 marked  2 uncommitted files · 1 commit only there   d removes them · esc clears
