tests/snapshots/snapshots__the_colours_of_the_list.snap
---
source: tests/snapshots.rs
expression: "render_palette(&mut app, 120, 20)"
---
 0 * Black White DarkGray Gray DarkGray Red DarkGray Yellow DarkGray Green
 1   DarkGray Cyan DarkGray
 2   DarkGray White DarkGray
 3 * DarkGray Cyan White DarkGray Yellow Red Green DarkGray
 4   DarkGray Green Gray Green DarkGray
 5   DarkGray Green Gray Yellow Green DarkGray Gray DarkGray
 6   DarkGray Cyan Gray Cyan DarkGray Gray DarkGray
 7   DarkGray Yellow Gray Yellow DarkGray Gray DarkGray
 8   DarkGray Red White Red DarkGray Red DarkGray
 9   DarkGray Red Gray Yellow Red DarkGray
10   DarkGray Red Gray Yellow Red DarkGray Cyan DarkGray
11   DarkGray Green Gray Green DarkGray
12   DarkGray Green Gray Yellow Green DarkGray
13   DarkGray Cyan Gray Green Cyan DarkGray
14   DarkGray Yellow Gray Green Yellow DarkGray
15   DarkGray Red Gray Red DarkGray
16   DarkGray Red Gray Yellow Red DarkGray
17   DarkGray Red Gray Green Red DarkGray
18   DarkGray
19   Cyan DarkGray Cyan DarkGray Cyan DarkGray Cyan DarkGray Cyan DarkGray Cyan DarkGray Cyan DarkGray Cyan DarkGray Cyan DarkGray Cyan DarkGray Cyan DarkGray Cyan DarkGray
