tests/snapshots/snapshots__the_confirmation_dialog_for_a_clean_worktree.snap
---
source: tests/snapshots.rs
expression: "render(&mut app, 120, 20)"
---
 caligula  1 repo · 7 worktrees (6 linked) · 1 dirty · 4 stale · 4 safe to remove
╭ sort activity · lens all ──────────────────────╮╭────────────────────────────────────────────────────────────────────╮
│   BRANCH                ↑    ↓    ±       AGE  ││ chore/clean  recent · last touched 9d                              │
│ ▾ fixture (6)           1         2        2h  ││ /fixture/clean                                                     │
│ │ ◆ main                                   2h  ││                                                                    │
│ │ ● feat/ahead          1                  1d  ││ ┃ Nothing to salvage — safe to remove                              │
│ │ ● chore/clean       ╭ Remove worktree? ────────────────────────────────────────────────────╮                       │
│ │ ● (3head000)        │ /fixture/clean                                                       │ts off main            │
│ │ ● feat/dirty        │ branch chore/clean                                                   │                       │
│ │ ✗ docs/gone         │ Clean. Nothing would be lost.                                        │                       │
│ │ ● fix/locked        │                                                                      │                       │
│                       │                                                                      │                       │
│                       │  y  do it     n  cancel                                              │                       │
│                       ╰──────────────────────────────────────────────────────────────────────╯                       │
│                                                ││                                                                    │
│                                                ││                                                                    │
│                                                ││                                                                    │
│                                                ││                                                                    │
╰────────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────╯
 j/k move  space mark  ←/→ fold  d remove  D +branch  p prune  c shell  f lens  s sort  / find  ? help
