tests/snapshots/snapshots__the_confirmation_dialog_for_uncommitted_work.snap
---
source: tests/snapshots.rs
expression: "render(&mut app, 120, 20)"
---
 caligula  1 repo · 7 worktrees (6 linked) · 1 dirty · 4 stale · 4 safe to remove
╭ sort activity · lens all ──────────────────────╮╭────────────────────────────────────────────────────────────────────╮
│ ▾ fixture                             6wt 1●   ││ feat/dirty  ancient · last touched 90d                             │
│ │ ◆ main                                   2h  ││ /fixture/dirty                                                     │
│ │ ● feat/ahead                       ↑1    1d  ││                                                                    │
│ │ ● chore/clean       ╭ Remove worktree and branch? ─────────────────────────────────────────╮                       │
│ │ ● (3head000)        │ /fixture/dirty                                                       │                       │
│ │ ● feat/dirty        │ branch feat/dirty                                                    │s off main             │
│ │ ✗ docs/gone         │ 2 uncommitted file(s) will be destroyed.                             │                       │
│ │ ● fix/locked        │ Branch feat/dirty will be deleted too (git branch -D).               │                       │
│                       │                                                                      │                       │
│                       │  y  do it     n  cancel                                              │                       │
│                       │                                                                      │acked)                 │
│                       ╰──────────────────────────────────────────────────────────────────────╯                       │
│                                                ││   ?? scratch.txt                                                   │
│                                                ││                                                                    │
│                                                ││ Recent commits                                                     │
│                                                ││   4r000000  90d  init: the first commit                            │
╰────────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────╯
 j/k move  space mark  ←/→ fold  d remove  D +branch  p prune  c shell  f lens  s sort  / find  ? help
