tests/snapshots/snapshots__the_footer_totals_what_the_marking_would_cost.snap
---
source: tests/snapshots.rs
expression: "render(&mut app, 120, 20)"
---
 caligula  1 repo · 7 worktrees (6 linked) · 1 dirty · 4 stale · 4 safe to remove
╭ sort activity · lens all ──────────────────────╮╭────────────────────────────────────────────────────────────────────╮
│   BRANCH                    ↑   ↓   ±     AGE  ││ (3head000)  stale · last touched 40d                               │
│ ▾ fixture (6)               1       2      2h  ││ /fixture/detached                                                  │
│ │ ◆ main                                   2h  ││                                                                    │
│▌│ ● feat/ahead              1              1d  ││ ┃ Nothing to salvage — safe to remove                              │
│▌│ ● chore/clean                            9d  ││                                                                    │
│ │ ● (3head000)                            40d  ││ branch    (3head000)  no upstream · 0 commits off main             │
│▌│ ● feat/dirty                      2     90d  ││ head      3c000000  init: the first commit                         │
│ │ ✗ docs/gone                          !   1y  ││           Fixture · 40d ago                                        │
│ │ ● fix/locked                         L   1y  ││ repo      fixture  /fixture/repo                                   │
│                                                ││                                                                    │
│                                                ││ Recent commits                                                     │
│                                                ││   3r000000  40d  init: the first commit                            │
│                                                ││                                                                    │
│                                                ││                                                                    │
│                                                ││                                                                    │
│                                                ││                                                                    │
╰────────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────╯
 3 marked  2 uncommitted files · 1 commit only there   esc clears · d still removes the row under the cursor
