tests/snapshots/snapshots__the_help_overlay.snap
---
source: tests/snapshots.rs
expression: "render(&mut app, 120, 30)"
---
 caligula  1 repo · 7 worktrees (6 linked) · 1 dirty · 4 stale · 2 safe to remove
╭ sort activity · lens all ──────────────────────╮╭────────────────────────────────────────────────────────────────────╮
│   BRANCH           ╭ keys ──────────────────────────────────────────────────────────────────────╮                    │
│ ▾ fixture (7)      │ j / k · ↓ / ↑  move                                                        │                    │
│ │ ◆ main           │ space          mark a worktree, and step down                              │                    │
│ │ ● feat/ahead     │ a              mark everything safe to remove in this repo                 │                    │
│ │ ● chore/clean    │ A              the same, everywhere the view is showing                    │                    │
│ │ ● (3head000)     │ J / K          jump to next / previous repo                                │                    │
│ │ ● feat/dirty     │ g / G          first / last row                                            │                    │
│ │ ✗ docs/gone      │ ← / → · enter  fold or unfold a repo                                       │ll surface it       │
│ │ ● fix/locked     │ z / Z          fold all / unfold all                                       │                    │
│                    │ tab            swap list and detail (narrow terminals)                     │                    │
│                    │ esc            clear the marking, then the filter                          │ to salvage      2h │
│                    │ PgUp / PgDn    scroll the detail pane                                      │                 1d │
│                    │                                                                            │fe to remove     9d │
│                    │ d              remove the marking, or the row under the cursor             │fe to remove    40d │
│                    │ D              the same, and delete the branches too                       │acked file      90d │
│                    │ p              prune the repo's stale worktree records                     │rktree — it m…   1y │
│                    │ L              lock or unlock the worktree                                 │ld — nothing …   1y │
│                    │                                                                            │                    │
│                    │ c              drop into a shell in the worktree                           │                    │
│                    │ o              open it in the file manager                                 │                    │
│                    │ y              copy its path to the clipboard                              │                    │
│                    │                                                                            │                    │
│                    │ f              cycle lens: all → dirty → salvageable → stale → safe        │                    │
│                    │ s              cycle sort: activity → name → risk                          │                    │
│                    │ ↓ 4 more  ·  any other key closes                                          │                    │
│                    ╰────────────────────────────────────────────────────────────────────────────╯                    │
╰────────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────╯
 j/k move  space mark  a/A sweep  ←/→ fold  d remove  D +branch  p prune  c shell  f lens  s sort  / find  ? help
