tests/snapshots/snapshots__the_list.snap
---
source: tests/snapshots.rs
expression: "render(&mut app, 120, 20)"
---
 caligula  1 repo · 7 worktrees (6 linked) · 1 dirty · 4 stale · 2 safe to remove
╭ sort activity · lens all ──────────────────────╮╭────────────────────────────────────────────────────────────────────╮
│   BRANCH                    ↑   ↓   ±     AGE  ││ fixture                                                            │
│ ▾ fixture (6)               1       2      2h  ││ /fixture/repo                                                      │
│ │ ◆ main                                   2h  ││                                                                    │
│ │ ● feat/ahead              1              1d  ││ origin    git@github.com:fixture/fixture.git                       │
│ │ ● chore/clean                            9d  ││ base      main                                                     │
│ │ ● (3head000)                            40d  ││ worktrees 7 (6 linked)                                             │
│ │ ● feat/dirty                      2     90d  ││ dirty     1                                                        │
│ │ ✗ docs/gone                          !   1y  ││ stashes   1 on no live branch — nothing else will surface it       │
│ │ ● fix/locked                         L   1y  ││                                                                    │
│                                                ││ Worktrees                                                          │
│                                                ││   ◆ main                Main checkout — nothing to salvage      2h │
│                                                ││   ● feat/ahead          1 off-base commit                       1d │
│                                                ││   ● chore/clean         Nothing to salvage — safe to remove     9d │
│                                                ││   ● (3head000)          Nothing to salvage — safe to remove    40d │
│                                                ││   ● feat/dirty          1 modified file, 1 untracked file      90d │
│                                                ││   ✗ docs/gone           Git cannot read this worktree — it m…   1y │
╰────────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────╯
 j/k move  space mark  a sweep  ←/→ fold  d remove  D +branch  p prune  c shell  f lens  s sort  / find  ? help
