tests/snapshots/snapshots__the_list_at_eighty_columns.snap
---
source: tests/snapshots.rs
expression: "render(&mut app, 80, 20)"
---
 caligula  1 repo · 7 worktrees (6 linked) · 1 dirty · 4 stale
╭ sort activity · lens all ────────────────────────────────────────────────────╮
│   BRANCH                                                  ↑   ↓   ±     AGE  │
│ ▾ fixture (7)                                             1       2      2h  │
│ │ ◆ main                                                                 2h  │
│ │ ● feat/ahead                                            1              1d  │
│ │ ● chore/clean                                                          9d  │
│ │ ● (3head000)                                                          40d  │
│ │ ● feat/dirty                                                    2     90d  │
│ │ ✗ docs/gone                                                        !   1y  │
│ │ ● fix/locked                                                       L   1y  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
 list  tab   j/k move  space mark  a/A sweep  d remove  ? help
