tests/snapshots/snapshots__the_list_at_sixty_columns.snap
---
source: tests/snapshots.rs
expression: "render(&mut app, 60, 20)"
---
 caligula  1 repo · 7 worktrees (6 linked) · 1 dirty · 4 sta
╭ sort activity · lens all ──────╮╭────────────────────────╮
│   BRANCH        ↑   ±     AGE  ││ fixture                │
│ ▾ fixture (6)   1   2      2h  ││ /fixture/repo          │
│ │ ◆ main                   2h  ││                        │
│ │ ● fe…/ahead   1          1d  ││ origin                 │
│ │ ● ch…/clean              9d  ││ git@github.com:fixture │
│ │ ● (3…ad000)             40d  ││ /fixture.git           │
│ │ ● fe…/dirty       2     90d  ││ base      main         │
│ │ ✗ docs/gone          !   1y  ││ worktrees 7 (6 linked) │
│ │ ● fi…locked          L   1y  ││ dirty     1            │
│                                ││                        │
│                                ││ Worktrees              │
│                                ││   ◆ main    No…   2h   │
│                                ││   ● fe…ahead1 …   1d   │
│                                ││   ● ch…cleanNo…   9d   │
│                                ││   ● (3…d000)No…  40d   │
│                                ││   ● fe…dirty2 …  90d   │
╰────────────────────────────────╯╰────────────────────────╯
 j/k move  space mark  a sweep  ←/→ fold  d remove  D +branc
